# slambot

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/slambot_description/share/slambot_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/slambot_description/share/slambot_description/assets/: base_link.part  base_link.stl  camera_link.stl  wheel_link.part  wheel_link.stl
install/slambot_description/share/slambot_description/cmake/: slambot_descriptionConfig.cmake
install/slambot_description/share/slambot_description/rviz/: rviz_config_namespaced.rviz
install/slambot_description/share/slambot_description/urdf/gazebo/: gazebo_plugins.xacro
install/slambot_description/share/slambot_description/urdf/modules/: chassis_and_wheels.xacro  lidar.xacro
log/: latest_build
slambot_bringup/: CMakeLists.txt  package.xml
slambot_bringup/config/: camera.yaml  joy_teleop.yaml  slambot_controllers.yaml
slambot_bringup/launch/: LAUNCH_FILES_GUIDE.md  dev_rviz_map_mode.launch.py  dev_rviz_nav_mode.launch.py  dev_rviz_teleop_only.launch.py  launch_file_guide.md  nav2_sim_no_slam.launch.py  real_map_mode.launch.py  real_nav_mode.launch.py  real_teleop_only.launch.py  sim_map_mode.launch.py  sim_map_mode_and_qrcodes.launch.py  sim_nav_mode.launch.py  sim_no_slam.launch.py  sim_only.launch.py  sim_teleop_only.launch.py  sim_with_cartographer.launch.py  sim_with_nav2.launch.py  sim_with_navigation.launch.py  sim_with_navigation2.launch.py  sim_with_slam.launch.py  sim_with_slam_and_qrcodes.launch.py  sim_with_slamtoolbox.launch.py
slambot_bringup/rviz/: dev_rviz_map_config.rviz
slambot_controllers/: package.xml  setup.cfg  setup.py
slambot_controllers/data/: qr_codes_coordinates.json
slambot_controllers/slambot_controllers/: qr_code_reader.py  qr_code_waypoint_follower.py  slambot_nav2_controller.py
slambot_description/: CMakeLists.txt  package.xml  slambot_config.json
slambot_description/assets/: camera.part  camera.stl  camera_link.part  caster_frame.part  caster_wheel.part  chassis.part  driven_wheel.part  lidar.part  lidar.stl  lidar_link.part  lidar_link.stl
slambot_description/config/: ekf.yaml  gazebo_and_rviz_config.rviz  gazebo_bridge.yaml  rviz_only_config.rviz  slam_config.yaml  slam_gz_rviz_config.rviz
slambot_description/launch/: gz_custom.launch.py  gz_empty.launch.py  rviz.launch.py  slam_gz_custom.launch.py  slam_launch_prechanges.launch.py
slambot_description/params/: gazebo_bridge.yaml
slambot_description/rviz/: rviz_only_config.rviz  slambot_config_gazebo.rviz  slambot_config_rviz_only.rviz
slambot_description/urdf/: slambot.urdf.xacro
slambot_description/urdf/gazebo/: gazebo_plugins.xacro  gazebo_properties.xacro
slambot_description/urdf/modules/: camera.xacro  chassis_and_wheels.xacro  imu.xacro  lidar.xacro
slambot_description/urdf/xacro_properties/: xacro_properties.xacro
slambot_description/worlds/: custom_world_1.sdf  maze_world_1.sdf
slambot_gazebo/: CMakeLists.txt  package.xml
slambot_gazebo/config/: ros_gz_bridge.yaml
slambot_gazebo/launch/: gazebo.launch.py
slambot_gazebo/models/house_interior/: IndoorAssembly_WithQRCodes.dae  house_interior_1.dae  house_interior_with_qrcodes.dae
slambot_gazebo/rviz/: gazebo_and_rviz_and_localization_config_namespaced.rviz  gazebo_and_rviz_config.rviz  gazebo_and_rviz_config_namespaced.rviz  gazebo_rviz_and_slam_config.rviz
slambot_gazebo/worlds/: indoor_world_1.sdf  indoor_world_with_qr_codes.sdf
slambot_hardware/: CMakeLists.txt  package.xml  slambot_hardware.xml
slambot_hardware/firmware/: CMakeLists.txt  cytron_jga25-371_motor_control.h  imu_bno055_driver.c  imu_bno055_driver.h  slambot_hardware_driver.c
slambot_hardware/include/slambot_hardware/: slambot_system.hpp
slambot_hardware/pico_drivers/: slambot_hardware_driver.c
slambot_hardware/src/: slambot_system.cpp
slambot_localization/: CMakeLists.txt  package.xml
slambot_localization/config/: ekf.yaml  ekf_namespaced.yaml  ekf_namespaced_real.yaml  ekf_namespaced_sim.yaml  ekf_v1.yaml
slambot_localization/launch/: localization.launch.py
slambot_nav2/: CMakeLists.txt  package.xml
slambot_nav2/config/: nav2_custom_params.yaml  nav2_custom_params_namespaced.yaml  nav2_params.yaml  nav2_real_params.yaml  nav2_sim_params.yaml  nav2_turtlebot_params.yaml
slambot_nav2/launch/: nav2.launch.py
slambot_nav2/maps/: indoor_map_1.pgm  indoor_map_1.yaml
slambot_nav2/rviz/: nav2_gz_rviz_noslam_config.rviz  nav2_gz_rviz_slamtoolbox_config.rviz  nav2_rviz_config.rviz  nav2_rviz_config_namespaced.rviz
slambot_scripts/: package.xml  setup.cfg  setup.py
slambot_scripts/slambot_scripts/: qr_code_reader.py  qr_code_waypoint_follower.py
slambot_slam/: CMakeLists.txt  package.xml
slambot_slam/config/: slam_params.yaml
slambot_slam/launch/: cartographer.launch.py  map_saver.launch.py  slam.launch.py  slam_namespaced.launch.py
slambot_slam/maps/: campion_downstairs_3.pgm  campion_downstairs_3.yaml  how_to_save_maps.txt  indoor_map_cartographed.pgm  indoor_map_cartographed.yaml  indoor_map_cartographer.pgm  indoor_map_cartographer.yaml  indoor_map_slamtoolboxed.pgm  indoor_map_slamtoolboxed.yaml  my_indoor_map_2.pgm  my_indoor_map_2.yaml  my_maze_map_1.pgm  my_maze_map_1.yaml
slambot_slam/rviz/: gazebo_rviz_and_cartographer_config_namespaced.rviz  gazebo_rviz_and_slam_config.rviz  gazebo_rviz_and_slam_config_namespaced.rviz  gazebo_rviz_slamtoolbox_config_namespaced.rviz
