<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slambot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="benalexandermay@gmail.com">ben-may</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>slambot_gazebo</exec_depend>
  <exec_depend>slambot_description</exec_depend>
  <exec_depend>slambot_slam</exec_depend>
  <exec_depend>slambot_localization</exec_depend>
  <exec_depend>slambot_nav2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
