<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slambot_controllers</name>
  <version>0.0.0</version>
  <description>ROS 2 Python controllers for QR code reading and waypoint logging during SLAM.</description>
  <maintainer email="benalexandermay@gmail.com">ben-may</maintainer>
  <license>Apache-2.0</license> 
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <exec_depend>python3-opencv</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend> 

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>