<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slambot_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="benalexandermay@gmail.com">ben-may</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!--Make sure to add these in!-->
  <depend>rclcpp</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>

  <!-- May need these... 
  <depend>controller_manager</depend>
  <depend>gz_ros2_control</depend>
  <depend>python3-numpy</depend>
  <depend>ros_gz_image</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>trajectory_msgs</depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
