<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slambot_localization</name>
  <version>0.1.0</version>
  <description>Extended Kalman Filter configurations and launches for Slambot state estimation.</description>
  <maintainer email="benalexandermay@gmail.com">ben-may</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!--Include these-->
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
