<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slambot_slam</name>
  <version>0.1.0</version>
  <description>SLAM launch files and utilities integrating Cartographer and SLAM Toolbox for Slambot.</description>
  <maintainer email="benalexandermay@gmail.com">ben-may</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!--Include these-->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  
  <depend>cartographer_ros</depend> 
  <depend>slam_toolbox</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
